--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Viva Translate Chrome Extension",
   "private": "true",
   "scripts": {
-    "dev": "NODE_ENV=development webpack --watch --config ./webpack.config.js",
-    "build": "pnpm run lint && NODE_ENV=production webpack --config ./webpack.config.js && pnpm run zip",
-    "lint": "tsc --noEmit && eslint '*/**/*.ts'",
-    "lint:win": "tsc --noEmit && eslint \"*/**/*.ts\"",
+    "dev": "cross-env NODE_ENV=development webpack --watch --config ./webpack.config.js",
+    "build": "pnpm run lint && cross-env NODE_ENV=production webpack --config ./webpack.config.js && pnpm run zip",
+    "lint": "tsc --noEmit && eslint \"*/**/*.ts\"",
     "lint:fix": "pnpm run lint -- --fix",
     "zip": "cd dist/ && bestzip ../viva-$npm_package_version-\"$(date +\"%m-%d-%y\")\".zip *"
   },
@@ -36,6 +35,7 @@
     "babel-loader": "^9.1.3",
     "bestzip": "^2.2.1",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
