--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ENVIRONMENT=development or production
-DEEPL_KEY=Deepl API Key for translations
+DEEPL_KEY=13448760-1a2f-4f36-9425-1d95bf6ec740:fx
 OPENAI_KEY=OpenAI API Key for AI using gpt-4o-mini
 GLADIA_KEY=Gladia.ai API Key for transcriptions
 MAX_TEXT_LENGTH=Max text length for translations in popup and highlight to translate (Recomended 7500)
